# sqm

./: .gitignore  .pre-commit-config.yaml  CICD.md  CLAUDE-JP.md  CLAUDE.md  Dockerfile  Makefile  README.md  REFACTORING.md  calc_bh.py  collect.py  complex_Langevin_BH.f90  functions_module.f90  functions_module.mod  pyproject.toml  read_dat.py  read_dat_mod.py  simulate.py  sweep.py  test_functions.f90  wparams.py  wtest.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
devlog/: 2026-02-08.md  README.md
devlog/2026/03/: 20.md
fortran/: complex_Langevin_BH.f90  functions_module.f90  test_functions.f90
src/sqm/: __init__.py  analysis.py  autocorrelation.py  calc_bh.py  cli.py  config.py  exceptions.py  experiment_log.py  fortran_io.py  plotting.py  read_dat_mod.py  runner.py  wparams.py
tests/: conftest.py  test_analysis.py  test_autocorrelation.py  test_cli.py  test_collect.py  test_config.py  test_exceptions.py  test_experiment_log.py  test_fortran_io.py  test_plotting.py  test_read_dat_mod.py  test_runner.py  test_simulate.py  test_sweep.py  test_wparams.py
