[project]
name = "sqm"
version = "0.1.0"
description = "Bose-Hubbard model simulation using complex Langevin method"
authors = [
    { name = "terauchi hiroshi", email = "terauchi.hiroshi@cloud-ace.jp" }
]
dependencies = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
sqm-simulate = "simulate:main"
sqm-sweep = "sweep:main"
sqm-collect = "collect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
